--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name : ps-exact
 channels: 
+  - legate
   - conda-forge
 dependencies:
   - python=3.12
@@ -12,3 +13,4 @@ dependencies:
   - threadpoolctl=3.6.0
   - line_profiler
   - cupy
+  - cupynumeric
