--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,10 @@
-name : test_yml
+name : ps-exact
 channels: 
   - legate/label/rc
+  - pytorch
   - conda-forge
 dependencies:
   - python=3.12
-  - pyscf
   - numpy
   - jax
   - matplotlib
@@ -14,3 +14,6 @@ dependencies:
   - line_profiler
   - cupy
   - cupynumeric=25.05.00.rc3
+  - pytorch-cuda
+  - pytorch
+  - torchvision
