--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,6 @@
 name : ps-exact
-channels: 
-  - legate/label/rc
+channels:
+  - legate/label/experimental
   - pytorch
   - conda-forge
 dependencies:
@@ -13,7 +13,8 @@ dependencies:
   - threadpoolctl=3.6.0
   - line_profiler
   - cupy
-  - cupynumeric=25.05.00.rc3
+  - nvtx
+  - cupynumeric
   - pytorch-cuda
   - pytorch
   - torchvision
