--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "torch>=2.7.1",
     "cupy-cuda12x>=13.4.1",
     "nvtx>=0.2.12",
+    "opt-einsum>=3.4.0",
 ]
 
 [tool.setuptools.packages.find]
